--- a/app/src/main/res/layout/declaration_activity.xml
+++ b/app/src/main/res/layout/declaration_activity.xml
@@ -29,6 +29,18 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                 app:titleTextColor="@color/cardview_light_background">
 
+                <ImageView
+                    android:id="@+id/button"
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="310dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/ic_send_black_24dp"
+                    android:onClick="onclick"
+                    android:text="@string/button" />
+
             </android.support.v7.widget.Toolbar>
 
             <TextView
@@ -255,20 +267,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
                     android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/button"
-                    style="@android:style/Widget.Material.Light.Button.Toggle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_weight="1"
-                    android:background="?android:attr/statusBarColor"
-                    android:onClick="onclick"
-                    android:text="@string/button"
-                    tools:text="Valider" />
-
 
             </LinearLayout>
 
