Ceci est un push

--- a/app/src/main/res/layout/declaration_activity.xml
+++ b/app/src/main/res/layout/declaration_activity.xml
@@ -50,37 +50,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:layout_weight="0"
-                android:text=" * Informations obligatoires :"
+                android:text=" * Informations demandées :"
                 android:textSize="14sp"
                 android:textStyle="bold" />
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/title_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@string/titre"
-                    android:inputType="text" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/prenom_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/nom" />
-            </android.support.design.widget.TextInputLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -95,7 +67,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="0.5"
-                    android:text="Catégorie" />
+                    android:text="@string/category" />
 
                 <Spinner
                     android:id="@+id/Spinner_category"
@@ -141,6 +113,32 @@
                 </Spinner>
             </LinearLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/title_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="@string/titre"
+                    android:inputType="text" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/prenom_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/nom" />
+            </android.support.design.widget.TextInputLayout>
 
             <TextView
                 android:id="@+id/textView4"
@@ -203,10 +201,7 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@+id/t_l_phone"
-                    android:inputType="phone" />
+                    android:layout_height="match_parent">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/assignee_number_input"
@@ -267,13 +262,28 @@
                     android:textSize="16sp"
                     android:visibility="gone" />
 
-
-                <RelativeLayout
-                    android:id="@+id/map_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp">
-
             </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/map1"
+                android:layout_width="match_parent"
+                android:layout_height="350dp">
+
+                <fragment
+                    android:id="@+id/map"
+                    class="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="-100dp"
+                    android:layout_marginBottom="-100dp"
+                    android:name="com.google.android.gms.maps.MapFragment"/>
+
+                <ImageView
+                    android:id="@+id/transparent_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="#00000000" />
+
+            </RelativeLayout>
 
         </LinearLayout>
 
