--- a/app/src/main/res/layout/change_event_item.xml
+++ b/app/src/main/res/layout/change_event_item.xml
@@ -27,6 +27,18 @@
                 android:minHeight="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                 app:titleTextColor="@color/cardview_light_background">
+
+                <ImageView
+                    android:id="@+id/button"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/ic_send_black_24dp"
+                    android:onClick="onclick" />
+
             </android.support.v7.widget.Toolbar>
 
 
@@ -270,19 +282,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="260dp"
                     android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/button"
-                    style="@android:style/Widget.Material.Light.Button.Toggle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_weight="1"
-                    android:background="@color/colorPrimary"
-                    android:onClick="onclick"
-                    android:text="@string/button"
-                    tools:text="Valider" />
 
             </LinearLayout>
 
