--- a/app/src/main/res/layout/declaration_activity.xml
+++ b/app/src/main/res/layout/declaration_activity.xml
@@ -29,26 +29,13 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                 app:titleTextColor="@color/cardview_light_background">
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_weight="0"
-                    android:text="Déclarer un incident"
-                    android:textColor="@color/cardview_light_background"
-                    android:textSize="18sp" />
-
-
                 <ImageView
                     android:id="@+id/button"
-                    android:layout_width="50dp"
+                    android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginLeft="310dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_weight="1"
+                    android:layout_marginLeft="60dp"
                     android:background="@drawable/ic_send_black_24dp"
+                    android:clickable="true"
                     android:onClick="onclick"
                     android:text="@string/button" />
 
