--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -44,7 +44,8 @@
                     android:layout_weight="0"
                     android:text="Détails d'un incident"
                     android:textColor="@color/cardview_light_background"
-                    android:textSize="18sp" />
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
 
             </android.support.v7.widget.Toolbar>
 
@@ -105,6 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_weight="1"
+                android:text="Reportaire : "
                 android:textColor="#463939"
                 android:textSize="16sp"
                 tools:text="Reportaire : " />
